added jenkins-api libary, added references to jenkins credentials, added a basic call to start the dummy job in jenkins

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lambda",
     "dynamo",
     "template",
-    "serverless"
+    "serverless",
+    "jenkins-api"
   ],
   "repository": {
     "type": "git",
