--- a/serverless.yml
+++ b/serverless.yml
@@ -51,6 +51,11 @@ custom:
   
   # Client Secret - quotes required
   slack_client_secret: ${env:SLACK_CLIENT_SECRET}
+
+  # Credentials for the bot to access the Jenkins API
+  jenkins_api_credentials: ${env:JENKINS_API_CREDENTIALS}
+
+
   
 
 provider:
@@ -75,6 +80,8 @@ provider:
     INSTALL_REDIRECT: ${self:custom.slack_install_redirect}
     VERIFICATION_TOKEN: ${self:custom.slack_verification_token}
     ENABLE_LOGGING: ${self:custom.slack_enable_logging}
+    JENKINS_API_CREDENTIALS: ${self:custom.jenkins_api_credentials}
+
 
 
 functions:
