--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,8 @@ custom:
 
   # Verification token
   slack_verification_token: ${env:SLACK_VERIFICATION_TOKEN}
+
+  slack_access_token: ${env:SLACK_ACCESS_TOKEN}
   
   # Space delimited scopes
   slack_client_scopes: "bot commands incoming-webhook"
@@ -85,6 +87,7 @@ provider:
     CLIENT_SCOPES: ${self:custom.slack_client_scopes}
     INSTALL_REDIRECT: ${self:custom.slack_install_redirect}
     VERIFICATION_TOKEN: ${self:custom.slack_verification_token}
+    ACCESS_TOKEN: ${self:custom.slack_access_token}
     ENABLE_LOGGING: ${self:custom.slack_enable_logging}
     JENKINS_API_CREDENTIALS: ${self:custom.jenkins_api_credentials}
     JENKINS_TARGET_JOB: ${self:custom.jenkins_target_job}
